完成 TASK-048：准备 v0.1.0-beta.1 Baseline